# ECGMonitor

./: .gitignore  CMakeLists.txt  ECGMonitor.txt  README.md
components/ADS1115/: ADS1115.c  Adafruit_ADS1X15.h  CMakeLists.txt
components/GPIOEXT_PCF8574/: CMakeLists.txt  GPIOEXT_PCF8574.c
components/RTC_db3231/: CMakeLists.txt  README.md  RTC_db3231.c
components/ds3231/: CMakeLists.txt  main.c
components/generic_i2c/: CMakeLists.txt  generic_i2c_register.c  generic_i2c_register.h
components/sdcard/: CMakeLists.txt  sdcard.c
include/: ADS1115.h  ECGSignalCapture.h  ECGcommon.h  sdcard.h
main/: CMakeLists.txt  ECGSignalCapture.c  InitI2C.c  InitI2C.h  Kconfig.projbuild  continuous_read_main.c  idf_component.yml  main.c
main/ECGLogData/: README.md
main/sigcapture/: README.md
main/sigproc/: README.md
main/sigstorage/: README.md
